lab1/Test/L1-A-10-53.output
Error Type B at Line 18
Error Type A at Line 24
Error Type A at Line 29
Error Type B at Line 37
Error Type A at Line 42
