lab1/Test/L1-A-10-53.cmm
struct V {
};
int mx2GCgeNBjLSYO0Gsf ( ) {
  if ( lQflVRqAhtrwws6 )   c66yAIttlgtS ;

}
int fGTVEmtue_pYI ( int jG8JHk ) {
  struct {
    int Z3WYv ;
  }Oe1xUhVSk9 ;
}
int wgztsBsdmwdWJVVXaqX , bO82p1iqWN8B 

;
struct h dfkWNp9nCmXe ( ) {
  int wt ;
  float VDEdVU9A0rI ;
  int int UxlheT38_Qodv9Qoy , ZrpQYN4BidCg0OZ5bX [ 
    1068687951 ] = x ;
  return c5HamTeAfwr36a7 = aOIFBXPN0d_14N && J8 == 
    M / - gS ( DD_GL9U8c = jg2dv9lS || N_vQ6YJ != gsJS2qNUJOt_fv 
    + ! i767Nxew74AmveA_ [ wFV9W8vYipb && XcDi * R8musNQd0dofnqsUArA 
    ( siRwOXKOjqKx , uw4rKRh = rEv__4fm9266e >= YSr1n2FipmVA3 
    * ( KdBWfB1 %< QXU5TnhY <= NBkxePYXVXQ ) * fujYYb 
    > ! - ! ! 292216941.1718600302 ) - ! - ErQ7JQ5rQ0SM 
    ( ) ] ) * ! 256245322 . _jilc ;
}
int ;
#int ;
int tBw0NUK ( ) {
}
int Hqa3kIlB6wS8Kps5 ( int _z3Nsj , int MoMtgHhj ) 
  {
  XIp0ULsryoY9ZwOtXdlW ;
  m9mEbUuMhf ;
  mK84W4 ;
  if ( QuzDUVwFmmJnHX9B  )   GorX1t ;
else   if ( HROpZN )   if ( dGfBNSPf )   v7pHFTyfA3m 
    ;
else   while ( F ) {
  }
$


}
